# ASFHAJFKSFAASF

./: .gitignore  Cargo.toml  foot.txt
get_responses/logs/: 5:22  PM.txt  7:33  PM.txt
src/: 12:53  AM  lib.rs  main.rs
src/get_responses/logs/: 10:44  AM.txt  1:19  AM  1:20  AM  1:25  AM  3:53  PM.txt  3:59  PM.txt  4:00  PM.txt  4:01  PM.txt  4:03  PM.txt  4:05  PM.txt  4:47  PM.txt  5:07  AM  5:52  AM.txt  5:52  PM.txt  5:54  PM.txt  6:09  AM.txt  7:35  PM.txt  8:56  PM.txt
src/get_responses/logs/logs/: 7:34  PM.txt
