[package]
name = "bomba"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.8"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
fs = "0.0.5"
full = "0.3.0"
reqwest = "0.12.20"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.45.1", features = ["full"] }
tzdb = "0.7.2"
walkdir = "2.5.0"
